# python-hearthstone

./: README.md  app.py  calculate_midr_value.py  collection.json  generate_embeddings.py  hearthstone.db  inspect_db.py  parse_collection.py  pyproject.toml  query_similar_cards.py  update_card_database.py  update_cards_by_keyword.py  xml2postgres.py  xml2sqlite.py
python_hearthstone.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
