[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-hearthstone"
version = "0.1.0"
description = "Um projeto para processar e gerar embeddings para dados de cartas de Hearthstone."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "transformers[torch]",
    "accelerate",
    "sentencepiece",
    "scikit-learn",
    "pandas",
]
[project.optional-dependencies]
dev = [
    "tomlkit",
]

[tool.setuptools]
py-modules = ["calculate_midr_value", "generate_embeddings", "xml2postgres", "xml2sqlite"]
